Add section 'program usage' to project documentation V1.1

--- a/project/tex/Boidachenko.tex
+++ b/project/tex/Boidachenko.tex
@@ -183,6 +183,14 @@ rysowany czarny lub biały piksel. Obrazek jest skalowany, żeby
  ładnie się otwierał w programach dla przeglądania grafiki.
  \newpage
 
+\section{Używanie programu}
+\par Po uruchomieniu skryptu użytkownik musi wprowadzić wymiar 
+labiryntu. Jeśli podany wymiar jest parzystą liczbą $x=2n$,
+to ona automatycznie jest zamieniana na najbliższą liczbę 
+nieparzystą $x=2n+1$, żeby obrazek ładnie wyglądał. W tym samym 
+folderze co i uruchamiany skrypt pojawią się dwa pliki wynikowe:
+ \textit{output.png} z obrazkiem wygenerowanego
+labiryntu i \textit{anim.gif} z animacją generowania labiryntu.
 
 
 
